# playground

./: Cargo.toml  README.md
cell/: Cargo.toml
cell/src/: arc_sync_cell.rs  errors.rs  lib.rs  lock.rs  owner.rs  refs.rs  rw_cell.rs  wrappers.rs
func/: Cargo.toml  build.rs
func/src/: items.proto  lib.rs  main.rs  snazzy_items.rs
gen-index/: Cargo.toml
gen-index/src/: lib.rs
lock/: Cargo.toml
lock/src/: lib.rs
matrix/src/: lib.rs  matrix.rs  matrix_mul.rs  matrix_mul_assign.rs  types.rs
next/: Cargo.toml  build.rs
next/java/com/example/rust/: Boo.java  CheckAllTypesInCallbackArgs.java  CircularDepsA.java  CircularDepsB.java  Code.java  DropCounter.java  EffectBuilder.java  EnumObserver.java  Foo.java  FooWithLifetime.java  Gamepad.java  Gamepad2.java  GamepadId.java  InternalPointerMarker.java  JNIReachabilityFence.java  LocationService.java  LongOperation.java  MyEnum.java  MyObserver.java  NavigationService.java  Observable.java  OneStaticFunctionTest.java  Position.java  ReturnInCallbackTester.java  RustLogging.java  Session.java  TestArraysWithPrimitiveTypes.java  TestCheckAllTypesInCallbackArgs.java  TestContainers.java  TestEnumClass.java  TestFnInline.java  TestInner.java  TestMultiThreadCallback.java  TestOptional.java  TestPassObjectsAsParams.java  TestPathAndResult.java  TestReturnInCallback.java  ThreadSafeObserver.java  Xyz.java
next/src/: chrono-include.rs  lib.rs
nimmkl/: nimmkl.nimble
nimmkl/src/: .gitignore  mklCblas.nim  mklLapacke.nim  (+4 more)
prims/: Cargo.toml
rnd/: Cargo.toml
rwcell/: Cargo.toml
sync_cell/: Cargo.toml
(+23 files in other folders)
