[package]
name = "next"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"


[lib]
name = "flapigen_test_jni"
crate-type = ["cdylib"]


[dependencies]
flapigen = "0.6.0-pre7"
chrono = "0.4.6"
env_logger = "0.9.0"
log = "0.4.14"


[build-dependencies]
bindgen = { version = "0.59.2", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
flapigen = "0.6.0-pre7"
env_logger = "0.9.0"
log = "0.4.14"
